// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CondensedCardDataComponent matches snapshot 1`] = `
<div
  className="usa-grid-full condensed-card-data"
>
  <CondensedCardDataPoint
    content="OFFICE MANAGEMENT (9017)"
    hasFixedTitleWidth={true}
    title="Skill code"
  />
  <CondensedCardDataPoint
    content="Freetown, Sierra Leone"
    hasFixedTitleWidth={true}
    title="Post"
  />
  <CondensedCardDataPoint
    content="03/13/2020"
    hasFixedTitleWidth={true}
    title="TED"
  />
  <CondensedCardDataPoint
    content={
      <LanguageList
        languages={Array []}
        propToUse="representation"
      />
    }
    hasFixedTitleWidth={true}
    title="Language"
  />
</div>
`;

exports[`CondensedCardDataComponent matches snapshot with an empty estimated end date 1`] = `
<div
  className="usa-grid-full condensed-card-data"
>
  <CondensedCardDataPoint
    content="None listed"
    hasFixedTitleWidth={true}
    title="Skill code"
  />
  <CondensedCardDataPoint
    content="Freetown, Sierra Leone"
    hasFixedTitleWidth={true}
    title="Post"
  />
  <CondensedCardDataPoint
    content="None listed"
    hasFixedTitleWidth={true}
    title="TED"
  />
  <CondensedCardDataPoint
    content={
      <LanguageList
        languages={Array []}
        propToUse="representation"
      />
    }
    hasFixedTitleWidth={true}
    title="Language"
  />
</div>
`;

exports[`CondensedCardDataComponent matches snapshot with an empty skill 1`] = `
<div
  className="usa-grid-full condensed-card-data"
>
  <CondensedCardDataPoint
    content="None listed"
    hasFixedTitleWidth={true}
    title="Skill code"
  />
  <CondensedCardDataPoint
    content="Freetown, Sierra Leone"
    hasFixedTitleWidth={true}
    title="Post"
  />
  <CondensedCardDataPoint
    content="03/13/2020"
    hasFixedTitleWidth={true}
    title="TED"
  />
  <CondensedCardDataPoint
    content={
      <LanguageList
        languages={Array []}
        propToUse="representation"
      />
    }
    hasFixedTitleWidth={true}
    title="Language"
  />
</div>
`;
